tests/rosetta/out/Haskell/catalan-numbers-1.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/catalan-numbers-1.hs:115:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/catalan-numbers-1.hs:110:1
                 /workspace/mochi/tests/rosetta/out/Haskell/catalan-numbers-1.hs:115:1
    |
115 | main = do
    | ^^^^
